TGR-188: TigerTest Annotation added